<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/cream_paper4">

    <LinearLayout
        android:id="@+id/cns_LL_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/cns_LL_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/cns_TView_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/creator"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"/>
            <EditText
                android:id="@+id/cns_EText_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textMultiLine|textCapSentences"
                android:backgroundTint="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cns_LL_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/cns_TView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/title"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"/>
            <EditText
                android:id="@+id/cns_EText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:inputType="textMultiLine|textCapSentences"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cns_LL_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cns_TView_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/text"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"/>
            <EditText
                android:id="@+id/cns_EText_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="@integer/maxLetters"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cns_BTN_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/baby_blue"
        android:text="@string/create"
        android:fontFamily="@font/oleo_script_regular"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/cns_BTN_cancel"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cns_BTN_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pale_sky_blue"
        android:text="@string/cancel"
        android:fontFamily="@font/oleo_script_regular"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>