<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cream_paper4">
    <LinearLayout
        android:id="@+id/songView_LL_songDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/songView_TV_songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/akaya_telivigala"

            android:text="Song Name"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/songView_TV_songCreator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="By Creator Name"
            android:textColor="@color/black"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/songView_TV_songText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/courgette_regular"
            android:text="@string/song_text_example"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/songView_RL_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/songView_BTN_editSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/baby_blue"
            android:text="@string/edit_song"
            android:fontFamily="@font/oleo_script_regular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/songView_BTN_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/songView_BTN_editSong"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pale_sky_blue"
            android:text="@string/back"
            android:fontFamily="@font/oleo_script_regular"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <LinearLayout
            android:id="@+id/songView_LL_lock_and_like_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/songView_BTN_editSong"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/songView_IMG_lock"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/icon_unlock"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/songView_IMG_favorite"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/songView_BTN_editSong"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/heart_empty"/>
        </LinearLayout>



    </RelativeLayout>



</RelativeLayout>